画像パスを絶対パスへ

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -195,7 +195,7 @@ import Layout from '../layouts/Layout.astro';
 						<div class="grid col-12">
 							<div class="grid col-12" style="margin: auto;text-align: center">
 								<div class="col-12">
-									<img src="src/img/profile.jpeg" width="100%" style="width:8rem;border-radius: 50%;height: 8rem" alt="iwamoto">
+									<img src="/profile.jpeg" width="100%" style="width:8rem;border-radius: 50%;height: 8rem" alt="iwamoto">
 								</div>
 								<div class="col-12">岩本　健吾</div>
 							</div>
