index.astro を更新

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -206,7 +206,7 @@ import Layout from '../layouts/Layout.astro';
 							</a>
 						</div>
 						<div class="grid col-12" style="padding: 0 .5rem">
-							東京音楽大学大学院音楽研究科器楽専攻鍵盤楽器研究領域（伴奏）修了。島村楽器ミュージックサロン南行徳ピアノ講師。
+							東京音楽大学大学院音楽研究科器楽専攻鍵盤楽器研究領域（伴奏）修了。
 							ピアニスト・作編曲家として演奏や教育活動をする傍ら、一般社団法人全日本ピアノ指導者協会（ピティナ）にて2015年より5年間半、ゼロから動画収録・編集の業務に携わる。自身の音楽スキルを存分に活かすことが可能な動画制作への好奇心が溢れ、2020年12月17日に「FoMクリエイト」を起業。国内外で活躍する著名なアーティストの収録も数多くおこなっている。</div>
 					</div>
 				</section>
